--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 html{
-margin-left: auto;
-margin-right:auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h1{
-text-align:center;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 150px;
 }
