--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,5 @@
-html{
-  margin-left: auto;
-  margin-right: auto;
-}
-
 h1{
-  text-align: center;
-  font-family: sans-serif;
-  font-size: 150px;
+  font-family: courier;
+  font-size: 160%;
+  color: white
 }
