--- a/styles.css
+++ b/styles.css
@@ -16,5 +16,43 @@ body{
 }
 #Lunch-Header{
   font-family: 'Karla', sans-serif;
-
 }
+#home {
+  color: white;
+  font-size: 70px;
+  font-family: 'alfa slab one';
+}
+
+h2 {
+  color: white;
+  font-family: 'varela round';
+}
+
+p {
+  color: white;
+  font-family: 'varela round';
+}
+
+.container {
+overflow: hidden;
+background-color: #333;
+font-family: 'bree serif';
+}
+
+.container a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.container a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+.show {
+  display: block;
+}
+
