changed index heading

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body{
 #Lunch-Header{
   font-family: 'Karla', sans-serif;
 }
-#home {
+#indexheading {
   color: white;
   font-size: 70px;
   font-family: 'alfa slab one';
