--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ font-family: 'bree serif';
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-family: 'bree serif';
 }
 
 .container a:hover, .dropdown:hover .dropbtn {
